--- a/css/lunar_majesty.css
+++ b/css/lunar_majesty.css
@@ -8,7 +8,7 @@
 }
 @font-face {
   font-family: 'CardContentFont';
-  src: url('../fonts/AMANE.otf') format('opentype');
+  src: url('../fonts/ModernAntiqua-Regular.ttf') format('opentype');
 }
 
 :root {
@@ -130,7 +130,7 @@ body {
 }
 
 .card-content {
-  font-size: 0.7rem;
+  font-size: 1.25rem;
   font-family: 'CardContentFont', sans-serif;
   color: var(--silver-light);
   line-height: 1.4;
