--- a/css/lunar_majesty.css
+++ b/css/lunar_majesty.css
@@ -213,6 +213,10 @@ body {
   font-style: italic;
   font-family: 'CardTitleFont', sans-serif;
   font-weight: normal;
+  -webkit-text-fill-color: #000 !important;
+  background: none !important;
+  -webkit-background-clip: initial !important;
+  background-clip: initial !important;
 }
 
 .site-footer a:hover {
